# OpenStreetNav

./: .gitignore  CMakeLists.txt  Doxyfile.in  OpenStreetNav.cabal  format.astyle  genmap.sh  index.html  quicktests.sh  runastyle.sh  runtests.sh
src/: CMakeLists.txt  FromString.hs  OsmData.hs  OsmXmlParser.hs  SlabDecomposition.hs  SqlRepresentation.hs  queries.pl  util.cpp  util.h
src/Importer/: Main.hs
src/SlabTest/: Main.hs
src/SqlRepresentation/: BasicInsertion.hs  Common.hs  TableDefinition.hs
src/Test/: Main.hs
src/cost/: CMakeLists.txt  CostAssigner.cpp  CostAssigner.h  LengthAssigner.cpp  LengthAssigner.h
src/displayer/: AreaBoundaryDisplayProvider.cpp  AreaBoundaryDisplayProvider.h  CMakeLists.txt  ColorStyleChanger.cpp  ColorStyleChanger.h  Descriptible.cpp  Descriptible.h  DescriptibleElement.cpp  DescriptibleElement.h  DescriptibleRoadEdge.cpp  DescriptibleRoadEdge.h  DisplayDB.cpp  DisplayDB.h  DisplayElement.cpp  DisplayElement.h  DisplayLine.cpp  DisplayLine.h  DisplayProvider.cpp  DisplayProvider.h  DisplayStyle.cpp  DisplayStyle.h  DisplayStyleChanger.cpp  DisplayStyleChanger.h  EdgeHighlightable.cpp  EdgeHighlightable.h  EdgeHighlighter.cpp  EdgeHighlighter.h  LineDisplayStyle.cpp  LineDisplayStyle.h  MapDrawingArea.cpp  MapDrawingArea.h  PureDisplayLine.cpp  PureDisplayLine.h  Thickener.cpp  Thickener.h  ZoomSpinButton.cpp  ZoomSpinButton.h  config.h.in  display.glade  main.cc  (+2 more)
src/edge_creator/: CMakeLists.txt  main.cc
src/elements/: CMakeLists.txt  CompByID.cpp  CompByID.h  CompositeElementContainer.cpp  CompositeElementContainer.h  ContainedElement.cpp  ContainedElement.h  Edge.cpp  Edge.h  EdgeBase.cpp  EdgeBase.h  Element.cpp  Element.h  ElementContainer.cpp  ElementContainer.h  HashElementContainer.cpp  HashElementContainer.h  NeverContainedElement.cpp  NeverContainedElement.h  Node.cpp  Node.h  NodeEdge.cpp  NodeEdge.h  ObjectType.h  Relation.cpp  Relation.h  RelationMapping.cpp  RelationMapping.h  SeqEdge.cpp  SeqEdge.h  Tag.cpp  Tag.h  Way.cpp  Way.h  WayRegion.cpp  WayRegion.h  osmelements.h
src/geoelements/: CMakeLists.txt  Edge.cpp  Edge.h  Point.cpp  Point.h  geoelements.cc  geoelements.h
src/importer/: CMakeLists.txt  main.cc
src/osmdb/: AllWayLister.cpp  AllWayLister.h  CMakeLists.txt  DisplayDB.cpp  DisplayDB.h  EdgeCreator.cpp  EdgeCreator.h  EdgeTranslator.cpp  EdgeTranslator.h  ElementCopy.cpp  ElementCopy.h  ElementEdgeTranslator.cpp  ElementEdgeTranslator.h  ElementImporter.cpp  ElementImporter.h  ElementInsertion.cpp  ElementInsertion.h  ImportTableProcessor.cpp  ImportTableProcessor.h  KeyValFilterTranslator.cpp  KeyValFilterTranslator.h  OsmDatabase.cpp  OsmDatabase.h  PropertiesSelection.cpp  PropertiesSelection.h  PropertiesSelectionException.cpp  PropertiesSelectionException.h  RoadEdgeCopy.cpp  RoadEdgeCopy.h  RoadEdgeProperties.cpp  RoadEdgeProperties.h  RoadEdgeTranslator.cpp  RoadEdgeTranslator.h  RoadLister.cpp  RoadLister.h  RoadNetworkCreator.cpp  RoadNetworkCreator.h  ToShowEdgesSelector.cpp  ToShowEdgesSelector.h  ToShowSelectCollection.cpp  (+6 more)
src/pathfinding/: AStar.h  AStarAreaFinding.cpp  AStarAreaFinding.h  AStarPathFinding.cpp  AStarPathFinding.h  AreaAlgorithm.cpp  AreaAlgorithm.h  AreaFinder.cpp  AreaFinder.h  CMakeLists.txt  OrderedCostNodeSet.cpp  OrderedCostNodeSet.h  PathFindAlgorithmFactory.cpp  PathFindAlgorithmFactory.h  PathFinder.cpp  PathFinder.h  PathFindingAlgorithm.cpp  PathFindingAlgorithm.h  Route.cpp  Route.h  pathfinding.h
src/projection/: CMakeLists.txt  FlatPoint.cpp  FlatPoint.h  MapProjection.cpp  MapProjection.h  OrthoProjection.cpp  OrthoProjection.h  projection.h
src/psql/: BindTypes.cpp  BindTypes.h  CMakeLists.txt  CopyTypes.cpp  CopyTypes.h  Cursor.cpp  Cursor.h  CursorIterator.cpp  CursorIterator.h  Database.cpp  Database.h  PgSqlException.cpp  PgSqlException.h  PqTypeWrap.cpp  PqTypeWrap.h  RetTypes.cpp  RetTypes.h  Statement.cpp  Statement.h  StatementParams.cpp  StatementParams.h  psql.cpp  psql.h
src/road_db_creator/: CMakeLists.txt  main.cc
src/roads/: CMakeLists.txt  IRoadNetworkNode.cpp  IRoadNetworkNode.h  PathFindContext.cpp  PathFindContext.h  RoadEdge.cpp  RoadEdge.h  RoadEdgeWithNodes.cpp  RoadEdgeWithNodes.h  RoadNetwork.cpp  RoadNetwork.h  RoadNetworkNode.cpp  RoadNetworkNode.h  roads.h
src/sqlite/: CMakeLists.txt  Database.cpp  Database.h  InvalidUseException.cpp  InvalidUseException.h  SqliteException.cpp  SqliteException.h  Statement.cpp  Statement.h  sqlitewrap.h
src/sqlitetest/: CMakeLists.txt  main.cc
src/sqllib/: AttributeFilter.h  CMakeLists.txt  CompositeSqlCreator.cpp  CompositeSqlCreator.h  SimpleSqlCreator.h  SqlCreator.cpp  SqlCreator.h  SqlCreatorFactory.cpp  SqlCreatorFactory.h  create_edges_endnode_fkey.sql  create_edges_location_index.sql  create_edges_pkey.sql  create_edges_startnode_fkey.sql  create_edges_table.sql  create_edges_wayid_fkey.sql  create_node_attributes.sql  create_node_members.sql  create_nodeattr_keyval_index.sql  create_nodeattributes_nodes_fkey.sql  create_nodeattributes_pkey.sql  create_nodemembers_node_fkey.sql  create_nodemembers_pkey.sql  create_nodemembers_relation_fkey.sql  create_nodes_loc_index.sql  create_nodes_pkey.sql  create_nodes_table.sql  create_relation_attributes.sql  create_relation_members.sql  create_relationattributes_pkey.sql  create_relationattributes_relation_fkey.sql  create_relations_pkey.sql  create_relations_table.sql  create_relattr_keyval_index.sql  create_test_table.sql  create_toshow_table.sql  create_way_attributes.sql  create_way_members_table.sql  create_wayattr_keyval_index.sql  create_wayattributes_pkey.sql  create_wayattributes_ways_fkey.sql  (+72 more)
src/test/: CMakeLists.txt  cost.cpp  display.cpp  geo.cpp  main.cc  osmdb.cpp  osmelements.cpp  pathfinding.cpp  projection.cpp  psql.cpp  roads.cpp  sqlite.cpp  sqllib.cpp  sqllib2.cpp  sqllib_test.cc  test.cpp  testconf.h.in  util.cpp  wayreduction_test.cpp  xml.cpp
src/util/: CMakeLists.txt  ConcatCollection.cpp  ConcatCollection.h  ParsingException.cpp  ParsingException.h  RowDataDeserializer.cpp  RowDataDeserializer.h  func.h  (+15 more)
(+2029 files in other folders)
