name: OpenStreetNav
version: 0.0.1
cabal-version: >=1.9.2
build-type: Simple
license: GPL
license-file: ""
synopsis: Test package to test configurations
description:
category: Example
author: Martin Kolinek

library
  hs-source-dirs: src
  build-depends: base -any, parseargs -any, hexpat -any,
               convertible -any, bytestring -any, base -any, HDBC-sqlite3 -any,
               HDBC -any, containers -any, directory -any
  exposed-modules: OsmData, OsmXmlParser, FromString
               SqlRepresentation.BasicInsertion, 
               SqlRepresentation.TableDefinition,
               SlabDecomposition
  ghc-prof-options: -auto-all -prof
  ghc-options: -rtsopts

executable OsmImporter
  main-is: Importer/Main.hs
  build-depends: base -any, parseargs -any, hexpat -any,
               convertible -any, bytestring -any, base -any, HDBC-sqlite3 -any,
               HDBC -any, OpenStreetNav -any, deepseq -any, parallel -any,
               text -any
  hs-source-dirs: src
  ghc-prof-options: -auto-all -prof
  ghc-options: -rtsopts

executable OsmSlabTest
  main-is: SlabTest/Main.hs
  build-depends: base -any, parseargs -any, hexpat -any,
               convertible -any, bytestring -any, base -any, HDBC-sqlite3 -any,
               HDBC -any, OpenStreetNav -any, deepseq -any, parallel -any,
               text -any, containers -any
  hs-source-dirs: src
  ghc-prof-options: -auto-all -prof
  ghc-options: -rtsopts 

test-suite tests
  main-is: Test/Main.hs
  build-depends: base -any, parseargs -any, hexpat -any,
               convertible -any, bytestring -any, base -any, HDBC-sqlite3 -any,
               HDBC -any, OpenStreetNav -any, HUnit -any, directory -any, containers -any
  type: exitcode-stdio-1.0
  hs-source-dirs: src
  ghc-prof-options: -auto-all -prof
  ghc-options: -rtsopts
